<resources>
    <string name="app_name">A Night at the Movies</string>

    <string-array name="movie_ratings">
        <item>G</item>
        <item>PG</item>
        <item>PG13</item>
        <item>NC16</item>
        <item>M18</item>
        <item>R21</item>
    </string-array>
    <string name="select_rating_prompt">Select Movie Rating</string>
    <string name="title">Title</string>
    <string name="genre">Genre</string>
    <string name="released_year">Released Year</string>
    <string name="insert">Insert</string>
    <string name="show_list">Show List</string>
    <string name="show_movies_with_rating">Show Movies with Rating</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="rating">Rating:</string>
    <string name="year">Year</string>
    <string name="movie_id">Movie ID</string>

</resources>